crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-duckdb[file]_clickbench_q2_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q2"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                          |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                     |
|               |  Projection: count(Int64(1)) AS count(*)                                                                                                                                                                      |
|               |   Aggregate: groupBy=[[]], aggr=[[count(Int64(1))]]                                                                                                                                                           |
|               |     TableScan: hits projection=[], full_filters=[CAST(hits.AdvEngineID AS Int64) != Int64(0)]                                                                                                                 |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                            |
|               |   CooperativeExec                                                                                                                                                                                             |
|               |     BytesProcessedExec                                                                                                                                                                                        |
|               |       VirtualExecutionPlan name=duckdb compute_context=//data/accelerated_duckdb.db base_sql=SELECT count(1) AS "count(*)" FROM "hits" WHERE (CAST("hits"."AdvEngineID" AS BIGINT) <> 0) |
|               |                                                                                                                                                                                                               |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
