crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-duckdb[file]_clickbench_q31_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q31"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                                                                           |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                                                            |
|               |   Sort: c DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                                          |
|               |     Projection: hits.SearchEngineID, hits.ClientIP, count(Int64(1)) AS c, sum(hits.IsRefresh), avg(hits.ResolutionWidth)                                                                                                                                                                                                                                                            |
|               |       Aggregate: groupBy=[[hits.SearchEngineID, hits.ClientIP]], aggr=[[count(Int64(1)), sum(hits.IsRefresh), avg(hits.ResolutionWidth)]]                                                                                                                                                                                                                                           |
|               |         Filter: CAST(hits.SearchPhrase AS Utf8View) != Utf8("")                                                                                                                                                                                                                                                                                                                     |
|               |           TableScan: hits projection=[ClientIP, IsRefresh, ResolutionWidth, SearchEngineID, SearchPhrase]                                                                                                                                                                                                                                                                           |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                  |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                                                                                                   |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                              |
|               |       VirtualExecutionPlan name=duckdb compute_context=//data/accelerated_duckdb.db base_sql=SELECT "hits"."SearchEngineID", "hits"."ClientIP", count(1) AS "c", sum("hits"."IsRefresh"), avg("hits"."ResolutionWidth") FROM "hits" WHERE (CAST("hits"."SearchPhrase" AS VARCHAR) <> '') GROUP BY "hits"."SearchEngineID", "hits"."ClientIP" ORDER BY "c" DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                                                                                                     |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
