crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-duckdb[file]_clickbench_q33_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q33"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                  |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                                                                                                                                                             |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                                              |
|               |   Sort: c DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                            |
|               |     Projection: hits.WatchID, hits.ClientIP, count(Int64(1)) AS c, sum(hits.IsRefresh), avg(hits.ResolutionWidth)                                                                                                                                                                                                                                                     |
|               |       Aggregate: groupBy=[[hits.WatchID, hits.ClientIP]], aggr=[[count(Int64(1)), sum(CAST(hits.IsRefresh AS Int64)), avg(CAST(hits.ResolutionWidth AS Float64))]]                                                                                                                                                                                                    |
|               |         TableScan: hits projection=[WatchID, ClientIP, IsRefresh, ResolutionWidth]                                                                                                                                                                                                                                                                                    |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                    |
|               |   CooperativeExec                                                                                                                                                                                                                                                                                                                                                     |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                |
|               |       VirtualExecutionPlan name=duckdb compute_context=//data/accelerated_duckdb.db base_sql=SELECT "hits"."WatchID", "hits"."ClientIP", count(1) AS "c", sum(CAST("hits"."IsRefresh" AS BIGINT)), avg(CAST("hits"."ResolutionWidth" AS DOUBLE)) FROM "hits" GROUP BY "hits"."WatchID", "hits"."ClientIP" ORDER BY "c" DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                                                                                                                                                       |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
