crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-duckdb[file]_clickbench_q35_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q35"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                             |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                                                                        |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                         |
|               |   Sort: c DESC NULLS FIRST                                                                                                                                                                                                       |
|               |     Projection: Int64(1), hits.URL, count(Int64(1)) AS c                                                                                                                                                                         |
|               |       Aggregate: groupBy=[[Int64(1), hits.URL]], aggr=[[count(Int64(1))]]                                                                                                                                                        |
|               |         TableScan: hits projection=[URL]                                                                                                                                                                                         |
| physical_plan | SchemaCastScanExec                                                                                                                                                                                                               |
|               |   CooperativeExec                                                                                                                                                                                                                |
|               |     BytesProcessedExec                                                                                                                                                                                                           |
|               |       VirtualExecutionPlan name=duckdb compute_context=//data/accelerated_duckdb.db base_sql=SELECT 1, "hits"."URL", count(1) AS "c" FROM "hits" GROUP BY CAST(1 AS BIGINT), "hits"."URL" ORDER BY "c" DESC NULLS FIRST LIMIT 10 |
|               |                                                                                                                                                                                                                                  |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
